# trellis-slat-fsq

./: .formatter.exs  .gitignore  CITATION.cff  LICENSE-APACHE  LICENSE-MIT  README.md  mix.exs  pixi.toml  pyproject.toml
config/: config.exs
decisions/: 20260713-drop-elixir-return-python-slangtorch.md  20260713-elixir-nx-slang-workflow.md  20260713-generation-slat-fsq-render-auxloss.md  20260713-no-budget-descope-render-free-fsq-only.md  20260713-pause-elixir-sequential-recommendation.md  20260713-pause-trellis-slat-fsq-no-generative.md  20260713-port-kyvo-residual-fsq.md  20260713-reproduce-kyvo-full-method-residual-fsq.md
lib/: trellis_slat_fsq.ex
lib/mix/tasks/: trellis.lm_check.ex  trellis.smoke.ex
lib/trellis_slat_fsq/: data.ex  eval.ex  fsq.ex  lm.ex  render_loss.ex  residual_fsq.ex  slang_port.ex  tokenizer.ex  train.ex
native/: build_windows.ps1  fsq_nif.cpp
scripts/: _slang_toolchain.py  make_real_slats.py  make_slat_dataset.py  phase5_tokenizer_train.py  phase6_loop.py  run_slang_tests.ps1
test/: test_helper.exs  trellis_slat_fsq_test.exs
tests/: test_tokenizer.py
trellis_slat_fsq/: __init__.py  data.py  eval.py  fsq.slang  fsq_nif.slang  fsq_torch.py  lm.py  raster.slang  render_loss.py  slang_ports.py  tokenizer.py  train.py
verify/: TrellisSlatFsqVerify.lean  lake-manifest.json  lakefile.toml
