[project]
name = "trellis-slat-fsq"
version = "0.1.0"
description = "TRELLIS.2 SLAT -> ~512 render-free FSQ tokens (fixed grid, no training). See decisions/20260713-no-budget-descope-render-free-fsq-only.md"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT OR Apache-2.0"
authors = [{ name = "K. S. Ernest (iFire) Lee" }]
dependencies = [
    "torch>=2.5",  # tensors + CPU reference path for the fixed-grid FSQ kernel (no training)
]

# No training/renderer/decoder (zero-compute descope, see decisions/). FSQ is a fixed grid; the CPU
# torch reference needs no CUDA, so `slang` (the CUDA fast path via slangtorch) stays optional.
[project.optional-dependencies]
slang = ["slangtorch"]
test = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trellis_slat_fsq"]

# --- pixi (prefix.dev) — project package manager ---------------------------------------------------------
# `pixi install` builds the env; `pixi run test` runs the suite (Slang path, needs the `slang` env + CUDA).
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]

# The package itself (editable) — pulls torch from [project.dependencies] as a pypi dep.
[tool.pixi.pypi-dependencies]
trellis-slat-fsq = { path = ".", editable = true }

[tool.pixi.dependencies]
python = ">=3.10,<3.13"

[tool.pixi.feature.test.dependencies]
pytest = ">=8"

# CUDA fast path: slangtorch (pypi). The Slang -> PyTorch tests require this env + a CUDA device.
[tool.pixi.feature.slang.pypi-dependencies]
slangtorch = "*"

[tool.pixi.environments]
default = { features = ["test"] }
slang = { features = ["test", "slang"] }

[tool.pixi.tasks]
test = "pytest -q"
